Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>