Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GF</fullName>
            </value>
            <value>
                <fullName>ASTRAL</fullName>
            </value>
            <value>
                <fullName>Cepex</fullName>
            </value>
            <value>
                <fullName>Asahi</fullName>
            </value>
            <value>
                <fullName>Coraplex</fullName>
            </value>
            <value>
                <fullName>Praher</fullName>
            </value>
            <value>
                <fullName>UNP Polyvalves</fullName>
            </value>
            <value>
                <fullName>Gemu</fullName>
            </value>
            <value>
                <fullName>Dinesh plastic products</fullName>
            </value>
            <value>
                <fullName>Parth plastics</fullName>
            </value>
            <value>
                <fullName>Hitech Applicator</fullName>
            </value>
            <value>
                <fullName>Xomox</fullName>
            </value>
            <value>
                <fullName>BDK</fullName>
            </value>
            <value>
                <fullName>Certikin</fullName>
            </value>
            <value>
                <fullName>Fischer rosemount</fullName>
            </value>
            <value>
                <fullName>Forbes Marshall</fullName>
            </value>
            <value>
                <fullName>Endress &amp; Hauser</fullName>
            </value>
            <value>
                <fullName>Yokogawa</fullName>
            </value>
            <value>
                <fullName>Burkert</fullName>
            </value>
            <value>
                <fullName>Azud</fullName>
            </value>
            <value>
                <fullName>Arkal</fullName>
            </value>
            <value>
                <fullName>ARI Valves</fullName>
            </value>
            <value>
                <fullName>Unirain</fullName>
            </value>
            <value>
                <fullName>Dorot</fullName>
            </value>
            <value>
                <fullName>Automat PTV</fullName>
            </value>
            <value>
                <fullName>Simona</fullName>
            </value>
            <value>
                <fullName>Kimplas</fullName>
            </value>
            <value>
                <fullName>Al-aziz</fullName>
            </value>
            <value>
                <fullName>Bentlay</fullName>
            </value>
            <value>
                <fullName>Sangir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>