Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Consultant_Name__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Name__c</fullName>
    <label>Consultant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>