Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Contractor_name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_name__c</fullName>
    <label>Contractor name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>