Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Convert_to_INR__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_INR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to INR</label>
    <type>Checkbox</type>
</CustomField>