Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Currency_Type__c.field-meta.xml
<CustomField>
    <fullName>Currency_Type__c</fullName>
    <label>Currency Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Frank</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>MYR</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>USD(Canada)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>