Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Date_of_Last_visit__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_visit__c</fullName>
    <label>Date of Last visit</label>
    <type>Date</type>
</CustomField>