Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>If the Competitor is &apos;Others&apos;</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>