Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <label>End Client</label>
    <length>100</length>
    <type>Text</type>
</CustomField>