Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Expected_Order_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Order_date__c</fullName>
    <label>Expected Order date</label>
    <type>Date</type>
</CustomField>