Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Expected_Supply_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Supply_date__c</fullName>
    <label>Expected Supply date</label>
    <type>Date</type>
</CustomField>