Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Identified_by__c.field-meta.xml
<CustomField>
    <fullName>Identified_by__c</fullName>
    <label>Identified by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>