Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/LastModified_Difference__c.field-meta.xml
<CustomField>
    <fullName>LastModified_Difference__c</fullName>
    <formula>Today()- DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModified Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>