Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Projects Today</fullName>
            </value>
            <value>
                <fullName>GWI</fullName>
            </value>
            <value>
                <fullName>Customer/Market</fullName>
            </value>
            <value>
                <fullName>Spec/Seg Manager</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
            <value>
                <fullName>InBound Call</fullName>
                <isActive>false</isActive>
                <label>InBound Call</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Reference</fullName>
                <isActive>false</isActive>
                <label>Reference</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>