Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Minutes_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Minutes_of_Meeting__c</fullName>
    <label>Minutes of Meeting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>