Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/MOC__c.field-meta.xml
<CustomField>
    <fullName>MOC__c</fullName>
    <label>MOC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UPVC</fullName>
            </value>
            <value>
                <fullName>CPVC</fullName>
            </value>
            <value>
                <fullName>PVDF</fullName>
            </value>
            <value>
                <fullName>PP-H</fullName>
            </value>
            <value>
                <fullName>ABS</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>HDPE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>