Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
                <isActive>false</isActive>
                <label>Consultant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>