Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Order_Loss__c.field-meta.xml
<CustomField>
    <fullName>Order_Loss__c</fullName>
    <label>Order Loss</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not approved list of make</fullName>
            </value>
            <value>
                <fullName>Prices were higher</fullName>
            </value>
            <value>
                <fullName>Incomplete range of Products</fullName>
            </value>
            <value>
                <fullName>Higher Delivery period</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
                <isActive>false</isActive>
                <label>Lost to Competitor</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <isActive>false</isActive>
                <label>No Budget / Lost Funding</label>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
                <isActive>false</isActive>
                <label>No Decision / Non-Responsive</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <isActive>false</isActive>
                <label>Price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>