Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Order_Loss_details__c.field-meta.xml
<CustomField>
    <fullName>Order_Loss_details__c</fullName>
    <label>Order Loss details</label>
    <type>TextArea</type>
</CustomField>