Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/PrimaryCampaignSource__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCampaignSource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>