Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Product_Fitment__c.field-meta.xml
<CustomField>
    <fullName>Product_Fitment__c</fullName>
    <label>Product Fitment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Super FLO ABS Durapipe</fullName>
            </value>
            <value>
                <fullName>Vulcathene Durapipe</fullName>
            </value>
            <value>
                <fullName>Air-Line Xtra Durapipe</fullName>
            </value>
            <value>
                <fullName>PLX Durapipe</fullName>
            </value>
            <value>
                <fullName>Polypropelyne Durapipe</fullName>
            </value>
            <value>
                <fullName>Valves FIP</fullName>
            </value>
            <value>
                <fullName>DIN Pipes FIP</fullName>
            </value>
            <value>
                <fullName>Instrumentation FIP</fullName>
            </value>
            <value>
                <fullName>Metallic Couplers Straub</fullName>
            </value>
            <value>
                <fullName>Piping System IPEX</fullName>
            </value>
            <value>
                <fullName>Filtmaster (Auto/Manual) Jimten</fullName>
            </value>
            <value>
                <fullName>ARV Jimten</fullName>
            </value>
            <value>
                <fullName>Couplers Jimten</fullName>
            </value>
            <value>
                <fullName>EF Fittings Friatec</fullName>
            </value>
            <value>
                <fullName>Korrosafe</fullName>
            </value>
            <value>
                <fullName>Swasth Pipes</fullName>
            </value>
            <value>
                <fullName>FIP fiitings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>