Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <label>Project Location</label>
    <type>TextArea</type>
</CustomField>