Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name old</label>
    <length>100</length>
    <type>Text</type>
</CustomField>