Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Quote Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>