Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <label>Revision Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>