Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Firm Enquiry</fullName>
            </value>
            <value>
                <fullName>Quotation Sent</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Invitation to Tender</fullName>
            </value>
            <value>
                <fullName>Technical Bid</fullName>
            </value>
            <value>
                <fullName>Technical Clearance</fullName>
            </value>
            <value>
                <fullName>Commercial Bid</fullName>
            </value>
            <value>
                <fullName>Technical Pre-Bid</fullName>
            </value>
            <value>
                <fullName>Bid Qualification</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>LOI Receipt</fullName>
            </value>
            <value>
                <fullName>BG Submission</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>RFQ Validation &amp; Recommendation</fullName>
            </value>
            <value>
                <fullName>Product Team/Pricing Team</fullName>
            </value>
            <value>
                <fullName>Offer Mailed</fullName>
            </value>
            <value>
                <fullName>Final Order</fullName>
            </value>
            <value>
                <fullName>Technical Discussion</fullName>
            </value>
            <value>
                <fullName>Technical Acceptance by customer</fullName>
            </value>
            <value>
                <fullName>Offer Submission</fullName>
            </value>
            <value>
                <fullName>Submission of Tech Docs / Drawings</fullName>
            </value>
            <value>
                <fullName>Manufacturing Clearance</fullName>
            </value>
            <value>
                <fullName>Production / Import</fullName>
            </value>
            <value>
                <fullName>Order Won</fullName>
            </value>
            <value>
                <fullName>Order Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>