Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Sub_segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_segment__c</fullName>
    <label>Sub segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ion Exchange</fullName>
            </value>
            <value>
                <fullName>Sand</fullName>
            </value>
            <value>
                <fullName>Carbon and Membrane Filtration</fullName>
            </value>
            <value>
                <fullName>Chemical Dosing</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>Reverse Osmosis</fullName>
            </value>
            <value>
                <fullName>Desalination</fullName>
            </value>
            <value>
                <fullName>Clarification/Flocculation</fullName>
            </value>
            <value>
                <fullName>Filtration</fullName>
            </value>
            <value>
                <fullName>Membrane Bioreactor</fullName>
            </value>
            <value>
                <fullName>Disinfection</fullName>
            </value>
            <value>
                <fullName>Post treatment</fullName>
            </value>
            <value>
                <fullName>Make Up system</fullName>
            </value>
            <value>
                <fullName>Ultra Pure water treatment and distribution</fullName>
            </value>
            <value>
                <fullName>Ultra Pure water Reclaim</fullName>
            </value>
            <value>
                <fullName>Process Cool Water</fullName>
            </value>
            <value>
                <fullName>Mixer</fullName>
            </value>
            <value>
                <fullName>Flotation</fullName>
            </value>
            <value>
                <fullName>Thickener</fullName>
            </value>
            <value>
                <fullName>Leaching</fullName>
            </value>
            <value>
                <fullName>Extraction</fullName>
            </value>
            <value>
                <fullName>Adsorption</fullName>
            </value>
            <value>
                <fullName>Elution</fullName>
            </value>
            <value>
                <fullName>Decant Water</fullName>
            </value>
            <value>
                <fullName>Slurry transport</fullName>
            </value>
            <value>
                <fullName>Acid mine drainage</fullName>
            </value>
            <value>
                <fullName>Compressed air</fullName>
            </value>
            <value>
                <fullName>Ballast water treatment</fullName>
            </value>
            <value>
                <fullName>Hot and cold water</fullName>
            </value>
            <value>
                <fullName>Black and grey water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>