Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Terms_and_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Condition__c</fullName>
    <label>Terms and Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>