Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/fields/Won_Lost__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost__c</fullName>
    <label>Won/Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stage__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Order Lost</fullName>
            </value>
            <value>
                <fullName>Order Receipt</fullName>
            </value>
            <value>
                <fullName>Data sheet &amp; Drawing submittal</fullName>
            </value>
            <value>
                <fullName>Manufacturing Clearance receipt</fullName>
            </value>
            <value>
                <fullName>Supply</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>