Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/recordTypes/Approval_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Approval_Record_Type</fullName>
    <active>true</active>
    <label>Approval Record Type</label>
</RecordType>