Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/recordTypes/Main_Opportunity_Layout.recordType-meta.xml
<RecordType>
    <fullName>Main_Opportunity_Layout</fullName>
    <active>false</active>
    <label>Main Opportunity Layout</label>
</RecordType>