Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/recordTypes/OpportunityClosedLost.recordType-meta.xml
<RecordType>
    <fullName>OpportunityClosedLost</fullName>
    <active>false</active>
    <label>OpportunityClosedLost</label>
</RecordType>