Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/recordTypes/OpportunityQuoteGenerate.recordType-meta.xml
<RecordType>
    <fullName>OpportunityQuoteGenerate</fullName>
    <active>false</active>
    <label>OpportunityQuoteGenerate</label>
</RecordType>