Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/validationRules/If_Competitor_is_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Competitor_is_Others</fullName>
    <active>true</active>
    <errorConditionFormula>AND((INCLUDES( Competitor__c , &quot;Others&quot;)), Description__c =&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>If the Competitor is &apos;Others&apos; then Description is mandatory</errorMessage>
</ValidationRule>