Partial_14Dec2021/force-app/main/default/objects/Opportunities__c/validationRules/Reason_for_loss_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_loss_rule</fullName>
    <active>true</active>
    <description>Make Reason_for_loss field editable only when  lost value is selected in won?lost picklist value</description>
    <errorConditionFormula>IF(TEXT( Stage__c ) &lt;&gt; &quot;Lost&quot;  &amp;&amp; NOT(ISBLANK( Order_Loss_details__c )), true,  IF(TEXT(Stage__c ) = &quot;Lost&quot;  &amp;&amp;  ISBLANK( Order_Loss_details__c ) , true, false) )</errorConditionFormula>
    <errorDisplayField>Order_Loss_details__c</errorDisplayField>
    <errorMessage>Please fill the description for the order loss.</errorMessage>
</ValidationRule>